<resources>
    <string name="app_name">Personal Notes</string>
    <string name="menu">menu</string>
    <string name="settings">Preferences</string>
    <string name="about">About</string>
    <string name="exit_message">Press again to exit</string>
    <string name="new_category">New Group</string>
    <string name="empty">empty</string>
    <string name="no_categories">Welcome to Personal Notes</string>
    <string name="no_notes">No notes found!</string>
    <string name="no_categories_desc">Click below add Icon to get started\ntaking notes</string>
    <string name="no_notes_desc">Start taking notes by creating\na new one</string>
    <string name="no_notes_hint">No notes</string>
    <string name="one_note">Only 1 Note</string>
    <string name="counter_note">%1$d notes</string>
    <string name="title">Title</string>
    <string name="choose_a_color">Choose a color:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="theme">theme</string>
    <string name="edit_category">Edit Group</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="back">back</string>
    <string name="new_note">New note</string>
    <string name="tool">tool</string>
    <string name="start_drawing">Start drawing</string>
    <string name="permission">Permission</string>
    <string name="storage_permission">notes needs to access your external storage to store data.</string>
    <string name="request">Request</string>
    <string name="permission_error">Permission not granted</string>
    <string name="permission_error_desc">notes might work incorrectly without permission to access the external storage.</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="permission_granted">Permission granted</string>
    <string name="backup">Backup data</string>
    <string name="restore">Restore data</string>
    <string name="new_folder">New folder</string>
    <string name="choose">Choose</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="required">This field is required</string>
    <string name="icon">icon</string>
    <string name="no_mounted_sd">No SD-Card was found</string>
    <string name="backup_saved">Backup data were saved at %1$s</string>
    <string name="backup_error">Backup error</string>
    <string name="data_restored">Back data were successfully restored.</string>
    <string name="restore_error">Restore error</string>
    <string name="not_implemented">This section has not been implemented.</string>
    <string name="about_desc">By Pallav Parikh</string>
    <string name="underline">underline</string>
    <string name="bold">bold</string>
    <string name="italic">italic</string>
    <string name="subscript">subscript</string>
    <string name="superscript">superscript</string>
    <string name="strikethrough">strikethrough</string>
    <string name="h1">h1</string>
    <string name="h2">h2</string>
    <string name="h3">h3</string>
    <string name="h4">h4</string>
    <string name="h5">h5</string>
    <string name="h6">h6</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background color</string>
    <string name="indent">indent</string>
    <string name="outdent">outdent</string>
    <string name="justify_left">justify_left</string>
    <string name="justify_center">justify center</string>
    <string name="justify_right">justify right</string>
    <string name="bullets">bullets</string>
    <string name="numbers">numbers</string>
    <string name="blockquote">blockquote</string>
    <string name="redo">redo</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
