<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ScrollView
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="UselessLeaf" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/amber">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusedByDefault="true"
                app:boxStrokeColor="@color/main_text"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/main_text"
                tools:targetApi="p">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_txt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:defaultFocusHighlightEnabled="true"
                    android:focusedByDefault="true"
                    android:hint="@string/title"
                    android:textColor="@color/main_text"
                    android:textColorHint="@color/main_text"
                    app:textInputLayoutFocusedRectEnabled="true"
                    tools:targetApi="p" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimary" />


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/ic_rectangle_73">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle_73"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/action_bold"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:clickable="true"
                    android:contentDescription="@string/bold"
                    android:focusable="true"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_bold" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/action_italic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:clickable="true"
                    android:contentDescription="@string/italic"
                    android:focusable="true"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_italic" />

                <ImageButton
                    android:id="@+id/action_underline"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:clickable="true"
                    android:contentDescription="@string/underline"
                    android:focusable="true"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_underline" />


                <ImageButton
                    android:id="@+id/action_subscript"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/subscript"
                    android:src="@drawable/subscript" />

                <ImageButton
                    android:id="@+id/action_superscript"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/superscript"
                    android:src="@drawable/superscript" />

                <ImageButton
                    android:id="@+id/action_strikethrough"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/strikethrough"
                    android:src="@drawable/strikethrough" />

                <ImageButton
                    android:id="@+id/action_heading1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/h1"
                    android:src="@drawable/h1" />

                <ImageButton
                    android:id="@+id/action_heading2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/h2"
                    android:src="@drawable/h2" />

                <ImageButton
                    android:id="@+id/action_heading3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/h3"
                    android:src="@drawable/h3" />

                <ImageButton
                    android:id="@+id/action_heading4"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/h4"
                    android:src="@drawable/h4" />

                <ImageButton
                    android:id="@+id/action_heading5"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/h5"
                    android:src="@drawable/h5" />

                <ImageButton
                    android:id="@+id/action_heading6"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/h6"
                    android:src="@drawable/h6" />

                <ImageButton
                    android:id="@+id/action_txt_color"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/text_color"
                    android:src="@drawable/txt_color" />

                <ImageButton
                    android:id="@+id/action_bg_color"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/background_color"
                    android:src="@drawable/bg_color" />


                <ImageButton
                    android:id="@+id/action_indent"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/indent"
                    android:src="@drawable/indent" />

                <ImageButton
                    android:id="@+id/action_outdent"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/outdent"
                    android:src="@drawable/outdent" />

                <ImageButton
                    android:id="@+id/action_align_left"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/justify_left"
                    android:src="@drawable/justify_left" />

                <ImageButton
                    android:id="@+id/action_align_center"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/justify_center"
                    android:src="@drawable/justify_center" />

                <ImageButton
                    android:id="@+id/action_align_right"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/justify_right"
                    android:src="@drawable/justify_right" />

                <ImageButton
                    android:id="@+id/action_insert_bullets"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/bullets"
                    android:src="@drawable/bullets" />

                <ImageButton
                    android:id="@+id/action_insert_numbers"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/numbers"
                    android:src="@drawable/numbers" />

                <ImageButton
                    android:id="@+id/action_blockquote"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/blockquote"
                    android:src="@drawable/blockquote" />

            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_undo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_baseline_circle_24"
                    android:contentDescription="@string/undo"
                    android:src="@drawable/undo" />

                <ImageButton
                    android:id="@+id/action_redo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_baseline_circle_24"
                    android:contentDescription="@string/redo"
                    android:src="@drawable/redo" />
            </LinearLayout>


        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="?attr/colorPrimary" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="562dp"
        app:layout_constraintBottom_toTopOf="@+id/retoolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draft_title"
        app:layout_goneMarginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="562dp"
        android:orientation="vertical">

    <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="#EFEFEF"
            android:clickable="true"
            android:focusable="true"
            android:gravity="top|start"
            android:scrollbars="vertical"
            />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


