<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/ic_empty_categories"
            android:scaleType="center"
            tools:ignore="MissingPrefix,VectorDrawableCompat"
            android:contentDescription="@string/empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text"
            android:textSize="@dimen/medium_text"
            android:layout_marginTop="16dp"
            android:text="@string/no_categories"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/main_text"
            android:textSize="@dimen/smaller_text"
            android:text="@string/no_categories_desc"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false">

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar

        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        app:fabAnimationMode="slide"
        app:menu="@menu/bottom_app_bar"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="?attr/colorPrimary"
        app:hideOnScroll="true"
        app:pressedTranslationZ="@dimen/dialog_button"
        android:background="?attr/fabColor"
        app:srcCompat="@drawable/fab_add_category"
        app:layout_anchor="@id/bottomAppBar"
        app:showMotionSpec="@anim/popup_enter"
        />

    <tds.pallav.notes.widget.Fab
        android:layout_width="@dimen/fab"
        android:layout_height="@dimen/fab"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/fabColor"
        android:clickable="true"
        android:contentDescription="@string/new_category"
        android:elevation="4dp"
        android:scaleType="center"
        android:visibility="gone"
        app:layout_anchorGravity="bottom|end"
        app:layout_behavior="tds.pallav.notes.inner.FabBehavior"
        app:srcCompat="@drawable/fab_add_category"
        tools:ignore="MissingPrefix,UnusedAttribute" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>