<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="?attr/emptyIcon"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text"
            android:textSize="@dimen/medium_text"
            android:layout_marginTop="16dp"
            android:text="@string/no_notes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/main_text"
            android:textSize="@dimen/smaller_text"
            android:text="@string/no_notes_desc"/>
    </LinearLayout>

    <View
        android:id="@+id/protector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="top|start"
        android:clickable="true"
        android:visibility="gone"
        android:background="@color/protector" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false">

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/new_note"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginEnd="20dp"
        app:iconSize="40dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="88dp"
        android:layout_margin="30dp"
        android:scaleType="centerInside"
        android:text="New Note"
        app:icon="@drawable/plus0" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>